--- a/syj/pom.xml
+++ b/syj/pom.xml
@@ -37,8 +37,8 @@
 	
 	<!-- JSTL -->
 	<dependency>
-	  <groupId>javax.servlet.jsp.jstl</groupId>
-	  <artifactId>jstl-api</artifactId>
+	  <groupId>javax.servlet</groupId>
+	  <artifactId>jstl</artifactId>
 	  <version>1.2</version>
 	</dependency>
 	
