--- a/SYJSpring/pom.xml
+++ b/SYJSpring/pom.xml
@@ -95,6 +95,20 @@
 	
 	
 	
+	<!-- Commons IO -->
+	<dependency>
+	  <groupId>commons-io</groupId>
+	  <artifactId>commons-io</artifactId>
+	  <version>2.4</version>
+	</dependency>
+	<dependency>
+	  <groupId>commons-fileupload</groupId>
+	  <artifactId>commons-fileupload</artifactId>
+	  <version>1.3.1</version>
+	</dependency>
+	
+	
+	
 	<!-- JSTL -->
 	<dependency>
 	  <groupId>javax.servlet</groupId>
