--- a/syj/WebContent/WEB-INF/command.properties
+++ b/syj/WebContent/WEB-INF/command.properties
@@ -1,3 +1,5 @@
 /answer/index.do=action.AnswerAction
 /index.do=action.userProAction
 /loginPro.do=action.loginProAction
+/answerWriteForm.do=action.answerWriteFormAction
+/answerWritePro.do=action.AnswerWriteProAction
