--- a/syj/WebContent/WEB-INF/command.properties
+++ b/syj/WebContent/WEB-INF/command.properties
@@ -1,2 +1,4 @@
 /index.do=action.MainAction
 /answer/index.do=action.AnswerAction
+/answerWriteForm.do=action.answerWriteFormAction
+/answerWritePro.do=action.AnswerWriteProAction
