--- a/syj/WebContent/WEB-INF/command.properties
+++ b/syj/WebContent/WEB-INF/command.properties
@@ -1,2 +1,3 @@
-/index.do=action.MainAction
 /answer/index.do=action.AnswerAction
+/index.do=action.userProAction
+/loginPro.do=action.loginProAction
