--- a/syj/WebContent/WEB-INF/command.properties
+++ b/syj/WebContent/WEB-INF/command.properties
@@ -1,10 +1,5 @@
-<<<<<<< HEAD
-/answer/index.do=action.AnswerAction
 /index.do=action.userProAction
-/loginPro.do=action.loginProAction
-=======
-/index.do=action.MainAction
 /answer/index.do=action.AnswerAction
->>>>>>> branch 'master' of https://github.com/tmdwo5811/SYJProject.git
 /answerWriteForm.do=action.answerWriteFormAction
 /answerWritePro.do=action.AnswerWriteProAction
+/answerList.do=action.AnswerAction
