프론트 수정, 회원가입 수정, 성종 요청으로 커밋

--- a/syj/WebContent/WEB-INF/command.properties
+++ b/syj/WebContent/WEB-INF/command.properties
@@ -1,3 +1,2 @@
 /answer/index.do=action.AnswerAction
-/index.do=action.userProAction
-/loginPro.do=action.loginProAction
+/join_testPro.do=action.userProAction
