커밋 보드리스트->리스트고침

--- a/syj/WebContent/WEB-INF/command.properties
+++ b/syj/WebContent/WEB-INF/command.properties
@@ -1,5 +1,7 @@
 /answer/index.do=action.AnswerAction
 /index.do=action.userProAction
-/writePro.do=action.WriteFormAction
+/writeForm.do=action.WriteFormAction
+/writePro.do=action.WriteProAction
 /answerWriteForm.do=action.AnswerWriteFormAction
 /answerWritePro.do=action.AnswerWriteProAction
+/list.do=action.MainAction
