--- a/syj/pom.xml
+++ b/syj/pom.xml
@@ -35,6 +35,13 @@
 	  <version>8.0.15</version>
 	</dependency>
 	
+	<!-- MyBatis -->
+	<dependency>
+	  <groupId>org.mybatis</groupId>
+	  <artifactId>mybatis</artifactId>
+	  <version>3.4.6</version>
+	</dependency>
+	
 	<!-- JSTL -->
 	<dependency>
 	  <groupId>javax.servlet</groupId>
