--- a/syj/WebContent/WEB-INF/command.properties
+++ b/syj/WebContent/WEB-INF/command.properties
@@ -6,3 +6,4 @@
 /answerWriteForm.do=action.AnswerWriteFormAction
 /answerWritePro.do=action.AnswerWriteProAction
 /list.do=action.MainAction
+/comment.do=action.CommantProAction
