세동씨 요청 list.jsp 컨텐츠 내용삭제 css width 값부여

--- a/syj/WebContent/WEB-INF/command.properties
+++ b/syj/WebContent/WEB-INF/command.properties
@@ -6,3 +6,5 @@
 /answerWriteForm.do=action.AnswerWriteFormAction
 /answerWritePro.do=action.AnswerWriteProAction
 /list.do=action.MainAction
+/login.do=action.LoginAction
+/LogError.do=action.LoginAction
