--- a/syj/WebContent/WEB-INF/command.properties
+++ b/syj/WebContent/WEB-INF/command.properties
@@ -6,5 +6,8 @@
 /answer/index.do=action.AnswerAction
 /answerWriteForm.do=action.answerWriteFormAction
 /answerWritePro.do=action.AnswerWriteProAction
+/list.do=action.MainAction
+/login.do=action.LoginAction
+/LogError.do=action.LoginAction
 /answerList.do=action.AnswerAction
 /list.do=action.MainAction
