로그인 기능 구현 완료 [승재]

--- a/syj/WebContent/WEB-INF/command.properties
+++ b/syj/WebContent/WEB-INF/command.properties
@@ -1,13 +1,11 @@
-
 /join_testPro.do=action.userProAction
 /index.do=action.userProAction
 /writeForm.do=action.WriteFormAction
 /writePro.do=action.WriteProAction
 /answer/index.do=action.AnswerAction
-/answerWriteForm.do=action.answerWriteFormAction
+/answerWriteForm.do=action.AnswerWriteFormAction
 /answerWritePro.do=action.AnswerWriteProAction
 /list.do=action.MainAction
 /login.do=action.LoginAction
-/LogError.do=action.LoginAction
 /answerList.do=action.AnswerAction
 /list.do=action.MainAction
