list,ListAction,writeForm.jsp수정

--- a/syj/WebContent/WEB-INF/command.properties
+++ b/syj/WebContent/WEB-INF/command.properties
@@ -4,7 +4,7 @@
 /writeForm.do=action.WriteFormAction
 /writePro.do=action.WriteProAction
 /answer/index.do=action.AnswerAction
-/answerWriteForm.do=action.answerWriteFormAction
+/answerWriteForm.do=action.AnswerWriteFormAction
 /answerWritePro.do=action.AnswerWriteProAction
 /list.do=action.MainAction
 /login.do=action.LoginAction
