세동컴퓨터마스터커밋

--- a/syj/WebContent/WEB-INF/command.properties
+++ b/syj/WebContent/WEB-INF/command.properties
@@ -1,13 +1,10 @@
 /join_testPro.do=action.userProAction
-/index.do=action.userProAction
+/index.do=action.MainAction
 /writeForm.do=action.WriteFormAction
 /writePro.do=action.WriteProAction
-/answer/index.do=action.AnswerAction
+/loginProc.do=action.LoginProAction
+/login.do=action.LoginAction
+/list.do=action.ListAction
 /answerWriteForm.do=action.AnswerWriteFormAction
 /answerWritePro.do=action.AnswerWriteProAction
-/list.do=action.MainAction
-/login.do=action.LoginAction
-/answerList.do=action.AnswerAction
-/list.do=action.MainAction
-/list.do=action.ListAction
-/content.do=action.ContentAction
+/answerList.do=action.AnswerListAction
