글상세보기완료 삭제,수정수정중

--- a/syj/WebContent/WEB-INF/command.properties
+++ b/syj/WebContent/WEB-INF/command.properties
@@ -8,3 +8,6 @@
 /answerWriteForm.do=action.AnswerWriteFormAction
 /answerWritePro.do=action.AnswerWriteProAction
 /answerList.do=action.AnswerListAction
+/content.do=action.ContentAction
+/deleteForm.do=action.DeleteFormAction
+/deletePro.do=action.DeleteProAction
